<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="15dp"
    android:background="#8000">

    <TextView
        android:text="@string/now_weather"
        android:textColor="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:textColor="#fff"
            android:text="@string/now_weather_humTips"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_now_hum"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/now_weather_pcpnTps"/>
        <TextView
            android:id="@+id/txt_now_pcpn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/now_weather_pres"/>
        <TextView
            android:id="@+id/txt_now_pres"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/now_weather_wind_sc"/>

        <TextView
            android:id="@+id/txt_now_wind_sc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#fff"/>

    </LinearLayout>



</LinearLayout>
